--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -7,6 +7,21 @@
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
 
+    <% base_url = ENV['APP_HOST'] || request.base_url %>
+    <!-- OGP (Open Graph Protocol) -->
+    <meta property="og:title" content="マグロマップ">
+    <meta property="og:description" content="配達員向け高単価案件共有アプリ">
+    <meta property="og:type" content="website">
+    <meta property="og:url" content="<%= request.original_url %>">
+    <meta property="og:image" content="<%= base_url %>/ogp.png">
+    <meta property="og:site_name" content="マグロマップ">
+
+    <!-- Twitter Card -->
+    <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:title" content="マグロマップ">
+    <meta name="twitter:description" content="配達員向け高単価案件共有アプリ">
+    <meta name="twitter:image" content="<%= base_url %>/ogp.png">
+
     <%= yield :head %>
 
     <link rel="manifest" href="/manifest.json">
